--- a/pkg1/package.json
+++ b/pkg1/package.json
@@ -8,9 +8,9 @@
     "kysely": "^0.28.8"
   },
   "scripts": {
-    "build": "tsgo --build"
+    "build": "tsc --build"
   },
   "devDependencies": {
-    "@typescript/native-preview": "7.0.0-dev.20250921.1"
+    "typescript": "^5.9.2"
   }
 }
