--- a/pkg2/package.json
+++ b/pkg2/package.json
@@ -7,10 +7,10 @@
     "kysely": "^0.28.8"
   },
   "scripts": {
-    "build": "tsgo --build"
+    "build": "tsc --build"
   },
   "devDependencies": {
-    "@typescript/native-preview": "7.0.0-dev.20250921.1"
+    "typescript": "^5.9.2"
   },
   "exports": {
     ".": {
