--- a/pkg2/package.json
+++ b/pkg2/package.json
@@ -7,7 +7,8 @@
     "kysely": "^0.28.8"
   },
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsgo --build",
+    "build-tsc": "tsc --build"
   },
   "devDependencies": {
     "typescript": "^5.9.2"
